# dashboard

./: .env  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
src/: app.py  dockerfile  manage.py
src/app/: main.py  models.py
src/app/core/: db.py  settings.py
src/component/: footer.py  header.py  sidebar.py  task_list.py
src/page/: home_page.py
