[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "geoalchemy2>=0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
